--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
         <!-- <div class="card">
          -->
-        <img src="download.png" alt="">
+        <img src="download.png" style="text-align:center" alt="">
         <br>
        <hr>
         <u><h4>About Me</h4></u>
